--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,27 +1,49 @@
 .page{
   height: 100vh;
-  background-color: #fff;
+  background-color: #f2f3f5;
 }
 .bg{
   position: absolute;
   left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 40%;
+  top: 0;
   width: 100%;
-  opacity: 0.4;
+  height: 100%;
   z-index: 0;
+  // top: 50%;
+  // transform: translateY(-50%);
+  // height: 40%;
+  // width: 100%;
+  // opacity: 0.4;
+  
 }
 .body{
   position: relative;
   z-index: 1;
 }
 .bg-animation {
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   filter: blur(69px);
   will-change: transform;
   background: linear-gradient( 135deg, #722ED1 0%, #1677ff 30%, #F5222D 70%, #13C2C2 100% );
   background-size: 200% 200%;
   animation: glow 10s ease infinite;
+}
+.filter{
+  top: 0;
+  left: 0;
+  z-index: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, transparent, #fff 8px);
+  background-size: 32px 32px;
+  backdrop-filter: saturate(50%) blur(24px);
+
 }
 
 @keyframes glow{
