--- a/src/app.less
+++ b/src/app.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'pixel-font';
-  src: url('https://www.lijiaming.top/uploads/font.TTF');
+  src: url('./font.woff');
 }
 page {
   font-family: "pixel-font";
