feat: list 数据操作

--- a/src/app.less
+++ b/src/app.less
@@ -1,7 +1,11 @@
+@import './resources/css/pix.css';
 @font-face {
   font-family: 'pixel-font';
   src: url('./font.woff');
 }
 page {
   font-family: "pixel-font";
+}
+View{
+  box-sizing: border-box;
 }
