feat: random 逻辑

--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -159,3 +159,28 @@
     padding: 0 24px;
   }
 }
+.transparent-mask{
+  background-color: transparent;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+}
+
+.share-box{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
+  .share-name{
+    font-size: 66px;
+    margin-bottom: 32px;
+  }
+  .share-count{
+    font-size: 56px;
+  }
+}
