--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -74,6 +74,8 @@
   user-select: none;
   color: #212529;
   background-color: #fff;
+  line-height: 1em;
+  border-radius: 0px;
 }
 .is-primary{
   color: #fff;
@@ -182,5 +184,14 @@
   }
   .share-count{
     font-size: 56px;
+  }
+}
+
+.btn-group{
+  margin-top: 84px;
+  display: flex;
+  flex-direction: column;
+  .nes-btn{
+    margin-bottom: 24px;
   }
 }
