--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -177,7 +177,9 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  
+  .share-title{
+    margin-bottom: 108px;
+  }
   .share-name{
     font-size: 66px;
     margin-bottom: 32px;
